--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@ limitations under the License.
       <version>2.6.0</version>
     </dependency>
     
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+      <version>1.6.0</version>
+    </dependency> 
 
   </dependencies>
   <build>
